--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -19,8 +19,13 @@
 				<div class="inner"></div>
 			</div>
 		</div>
-    <p class="temp">{{temp}}</p>
-		<p class="conditions">Sunny</p>
+	<p class="temp">Temperature: {{temp}} °C</p>
+	<p class="temp">Feels Like {{feels_like}} °C</p>
+	<p class="temp">Min Temperature: {{temp_min}} °C</p>
+	<p class="temp">Max Temperature: {{temp_max}} °C</p>
+	<p class="conditions">Conditions: </p>
+	<p class="wind">Wind speed: {{wind}} mph</p>
+	<p class="humidity">Humidity: {{humidity}}%</p>
 	</div>
 	<!-- Future Forecast
 	<div id="future" class="wrapper">
