--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -26,7 +26,7 @@
 	<tr *ngFor="let element of currentWeather.weather">
 		<td>Conditions: {{element.main}}</td>
 	</tr>
-	<p class="visibility">Visibility: {{visibility}}</p>
+	<p class="visibility">Visibility: {{visibility}} Km</p>
 	<p class="wind">Wind speed: {{wind}} m/s</p>
 	<p class="humidity">Humidity: {{humidity}}%</p>
 	</div>
