--- a/src/app/current-weather/current-weather.component.css
+++ b/src/app/current-weather/current-weather.component.css
@@ -294,11 +294,10 @@ nav {
 	}
 }
 
-*--------------------------------------------
+*/--------------------------------------------
     WEATHER ICONS
 ----------------------------------------------*/
-* { box-sizing: border-box; }
-html { background: #86B9E0; }
+
 h1.title {
 	color: rgba(255,255,255,0.8);
 	font-family: Helvetica, Arial, sans-serif;
@@ -337,32 +336,32 @@ h1.title {
 	letter-spacing: 0;
 	position: absolute;
 }
-.clear, .sunny, .mostlysunny, .partlycloudy, .mostlycloudy, .partlysunny, .cloudy, .fog, .hazy, .chancerain, .rain, .chancetstorms, .tstorms, .chancesleet, .sleet, .chanceflurries, .flurries, .chancesnow, .snow, .inner {
+.clear, .clouds, .fog, .haze, .dust, .ash, .mist, .smoke, .sand, .squall, .tornado, .rain, .drizzle, .thunderstorm, .snow, .inner {
 	height: inherit;
 	width: inherit;
 }
 
 /*** Clear/Sunny ***/
-.clear, .sunny {
+.clear {
 	margin-top: 48.5%;
 }
-.clear, .clear:before, .clear > .inner:before, .clear > .inner:after, .sunny, .sunny:before, .sunny > .inner:before, .sunny > .inner:after {
+.clear, .clear:before, .clear > .inner:before, .clear > .inner:after {
 	background: #FFD632;
 	left: 0;
 	top: 48.5%;
 	width: 100%;
 	height: 0.2em;
 }
-.clear:before, .sunny:before {
+.clear:before{
 	transform: rotate(45deg);
 }
-.clear > .inner:before, .sunny > .inner:before {
+.clear > .inner:before{
 	transform: rotate(90deg);
 }
-.clear > .inner:after, .sunny > .inner:after {
+.clear > .inner:after{
 	transform: rotate(135deg);
 }
-.clear:after, .sunny:after {
+.clear:after {
 	background: #FFD632;
 	border-radius: 50%;
 	height: 60%;
@@ -371,8 +370,8 @@ h1.title {
 	width: 60%;
 }
 
-/*** Partly Cloudy/Mostly Sunny ***/
-.mostlysunny, .partlycloudy {
+/** Partly Cloudy/Mostly Sunny **/
+/* .mostlysunny, .partlycloudy {
 	background: #FFD632;
 	height: 80%;
 	margin-left: 48.5%;
@@ -419,9 +418,9 @@ h1.title {
 	height: 50%;
 	left: 10%;
 	width: 55%;
-}
+} */
 /*** Mostly Cloudy/Partly Sunny ***/
-.mostlycloudy,
+/* .mostlycloudy,
 .partlysunny {
 	background: #FFD632;
 	height: 80%;
@@ -469,48 +468,49 @@ h1.title {
 	height: 63%;
 	left: 0;
 	width: 70%;
-}
+} */
+
 /*** Cloudy ***/
-.cloudy:before, .cloudy > .inner:before, .cloudy > .inner:after, .cloudy:after {
+.clouds:before, .clouds > .inner:before, .clouds > .inner:after, .clouds:after {
 	background: #fff;
 	border-radius: 50%;
 }
-.cloudy:before {
+.clouds:before {
 	height: 35%;
 	right: 0;
 	top: 0;
 	width: 38%;
 }
-.cloudy > .inner:before {
+.clouds > .inner:before {
 	height: 27%;
 	left: 45%;
 	top: 8%;
 	width: 30%;
 }
-.cloudy > .inner:after {
+.clouds > .inner:after {
 	bottom: 0;
 	height: 50%;
 	right: 0;
 	width: 55%;
 }
-.cloudy:after {
+.clouds:after {
 	bottom: 0;
 	height: 63%;
 	left: 0;
 	width: 70%;
 }
-/*** Fog / Hazy ***/
-.fog:before, .fog:after, .hazy:before, .hazy:after {
+/*** Fog / Haze / Mist / Smoke / Ash / Dust / Tornado / Squall / Sand ***/
+.fog:before, .fog:after, .haze:before, .haze:after, .mist:before, .mist:after , .smoke:before, .smoke:after, .dust:before, .dust:after, .sand:before, .sand:after, .ash:before, .ash:after, .squall:before, .squall:after, .tornado:before, .tornado:after  {
 	background: #fff;
 	border-radius: 50%;
 }
-.fog:before, .hazy:before {
+.fog:before, .haze:before, .mist:before, .smoke:before, .dust:before, .sand:before, .ash:before, .squall:before, .tornado:before {
 	height: 63%;
 	left: 0;
 	top: 0;
 	width: 70%;
 }
-.fog:after, .hazy:after {
+.fog:after, .haze:after, .mist:after, .smoke:after, .dust:after, .sand:after, .ash:after, .squall:after, .tornado:after {
 	height: 50%;
 	right: 0;
 	top: 13%;
@@ -530,8 +530,8 @@ h1.title {
 	bottom: 0;
 }
 
-/*** Chance Rain / Rain ***/
-.chancerain:before, .chancerain > .inner:before, .rain:before, .rain > .inner:before {
+/*** Rain ***/
+.rain:before, .rain > .inner:before {
 	border-left: 0.2em dashed #fff;
 	border-right: 0.2em dashed #fff;
 	bottom: 0;
@@ -539,31 +539,31 @@ h1.title {
 	transform: skew(-20deg);
 	width: 13%;
 }
-.chancerain:before, .rain:before {
+.rain:before {
 	left: 25%;
 }
-.chancerain > .inner:before, .rain > .inner:before {
+.rain > .inner:before {
 	left: 57%;
 }
-.chancerain > .inner:after, .chancerain:after, .rain > .inner:after, .rain:after {
+.rain > .inner:after, .rain:after {
 	background: #7799AF;
 	border-radius: 50%;
 }
-.chancerain > .inner:after, .rain > .inner:after {
+.rain > .inner:after {
 	height: 63%;
 	left: 0;
 	top: 0;
 	width: 70%;
 }
-.chancerain:after, .rain:after {
+.rain:after {
 	height: 50%;
 	right: 0;
 	top: 13%;
 	width: 55%;
 }
 
-/*** Chance T-Storms / T-Storms ***/
-.chancetstorms:before, .tstorms:before {
+/*** T-Storms ***/
+.thunderstorm:before {
 	background: #FFD632;
 	height: 30%;
 	left: 43%;
@@ -571,32 +571,32 @@ h1.title {
 	transform: skew(-20deg);
 	width: 10%;
 }
-.chancetstorms > .inner:before, .tstorms > .inner:before {
+.thunderstorm > .inner:before {
 	border-right: 0.7em solid transparent;
 	border-top: 1.9em solid #FFD632;
 	bottom: 0;
 	left: 45%;
 	transform: skew(-20deg);
 }
-.chancetstorms > .inner:after, .chancetstorms:after,
-.tstorms > .inner:after, .tstorms:after {
+
+.thunderstorm > .inner:after, .thunderstorm:after {
 	background: #7799AF;
 	border-radius: 50%;
 }
-.chancetstorms > .inner:after, .tstorms > .inner:after {
+.thunderstorm > .inner:after {
 	height: 63%;
 	left: 0;
 	top: 0;
 	width: 70%;
 }
-.chancetstorms:after, .tstorms:after {
+.thunderstorm:after {
 	height: 50%;
 	right: 0;
 	top: 13%;
 	width: 55%;
 }
-/*** Chance Sleet / Sleet ***/
-.chancesleet:before, .sleet:before {
+/*** Sleet ***/
+/* .chancesleet:before, .sleet:before {
 	border-left: 0.2em dashed #fff;
 	border-right: 0.2em dashed #fff;
 	bottom: 0;
@@ -629,64 +629,65 @@ h1.title {
 	right: 0;
 	top: 13%;
 	width: 55%;
-}
-/*** Chance Flurries / Flurries ***/
-.chanceflurries > .inner:before, .chanceflurries > .inner:after, .flurries > .inner:before, .flurries > .inner:after {
+} */
+
+/*** Drizzle ***/
+.drizzle > .inner:before, .drizzle > .inner:after {
 	color: #fff;
 	content: "\25CF\ \25CF\ \25CF";
 	font-size: 1.1em;
 }
-.chanceflurries > .inner:before, .flurries > .inner:before {
+.drizzle > .inner:before {
 	bottom: 17%;
 	right: 25%;
 }
-.chanceflurries > .inner:after, .flurries > .inner:after {
+.drizzle > .inner:after {
 	bottom: 0;
 	left: 25%;
 }
-.chanceflurries:before, .chanceflurries:after,
-.flurries:before, .flurries:after {
+
+.drizzle:before, .drizzle:after {
 	background: #BACEDD;
 	border-radius: 50%;
 }
-.chanceflurries:before, .flurries:before {
+.drizzle:before {
 	height: 63%;
 	left: 0;
 	top: 0;
 	width: 70%;
 }
-.chanceflurries:after, .flurries:after {
+.drizzle:after {
 	height: 50%;
 	right: 0;
 	top: 13%;
 	width: 55%;
 }
-/*** Chance Snow / Snow ***/
-.chancesnow > .inner:before, .chancesnow > .inner:after, .snow > .inner:before, .snow > .inner:after {
+/*** Snow ***/
+.snow > .inner:before, .snow > .inner:after {
 	color: #fff;
 	content: "\2733\ \2733\ \2733";
 	font-size: 1em;
 }
-.chancesnow > .inner:before, .snow > .inner:before {
+.snow > .inner:before {
 	bottom: 17%;
 	right: 21%;
 }
-.chancesnow > .inner:after, .snow > .inner:after {
+.snow > .inner:after {
 	bottom: 0;
 	left: 21%;
 }
-.chancesnow:before, .chancesnow:after,
+
 .snow:before, .snow:after {
 	background: #BACEDD;
 	border-radius: 50%;
 }
-.chancesnow:before, .snow:before {
+.snow:before {
 	height: 63%;
 	left: 0;
 	top: 0;
 	width: 70%;
 }
-.chancesnow:after, .snow:after {
+.snow:after {
 	height: 50%;
 	right: 0;
 	top: 13%;
