--- a/src/app/current-weather/current-weather.component.css
+++ b/src/app/current-weather/current-weather.component.css
@@ -1,7 +1,7 @@
 /*----------------
 	General
 -----------------*/
-* {
+{
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
@@ -294,7 +294,7 @@ nav {
 	}
 }
 
-*/--------------------------------------------
+/*--------------------------------------------
     WEATHER ICONS
 ----------------------------------------------*/
 
