--- a/src/app/current-weather/current-weather.component.css
+++ b/src/app/current-weather/current-weather.component.css
@@ -15,7 +15,7 @@ html, body {
 	width: 100%;
 }
 body {
-	background-color: #86B9E0;
+	background-color:lightskyblue;
 	font-family: 'Alegreya Sans', sans-serif;
 	font-weight: 300;
 	position: relative;
@@ -51,12 +51,13 @@ footer {
 }
 
 
+
 /*----------------
 	Status Bar
 -----------------*/
 #status {
 	background-color: #FFECAE;
-	color: rgba(0,0,0,0.5);
+	color: white;
 	display: none;
 	font-size: 1rem;
 	width: 100%;
@@ -71,7 +72,7 @@ footer {
 }
 #status .close {
 	background: none;
-	color: rgba(0,0,0,0.5);
+	color: white;
 	float: right;
 	height: 40px;
 	position: absolute;
@@ -153,12 +154,14 @@ nav {
 .location {
 	font-size: 2em;
 	font-weight: 700;
-	margin: 0;
+    margin: 0;
+    color: white;
 }
 .date {
 	font-size: 1em;
 	font-weight: 300;
-	text-transform: uppercase;
+    text-transform: uppercase;
+    color: white;
 }
 #current .weatherIcon {
 	height: 100px;
