--- a/src/app/current-weather/current-weather.component.html
+++ b/src/app/current-weather/current-weather.component.html
@@ -6,12 +6,12 @@
 	</div>
 	<!-- Current Weather -->
 	<div id="current" class="wrapper">
-		<nav>
+		<!-- <nav>
 			<button id="locateBtn">
 				<i class="fa fa-location-arrow" aria-hidden="true"></i>
 			</button>
 			<button id="unitBtn" data-units="f">f</button>
-		</nav>
+		</nav> -->
     <h1 class="location">{{city}}</h1>
 		<h2 class="date">Local time: {{(currentWeather.dt)*1000 | date:'MMM d, y, h:mm:ss a'}}</h2>
 		<div class="weatherIcon">
